--- a/index.html
+++ b/index.html
@@ -152,14 +152,23 @@
         </ul>
     </div>
 
-    <header class="hero-section" id="hero-slider">
+ <header class="hero-section" id="hero-slider">
+    <div class="ken-burns-slides">
+        <div class="kb-slide active" style="background-image: url('kasumi_fort.png');"></div>
+        <div class="kb-slide" style="background-image: url('fort_kasumbi_full_view.png');"></div>
+        <div class="kb-slide" style="background-image: url('fort_kasumbi_2.png');"></div>
+        <div class="kb-slide" style="background-image: url('fort_kasumbi_3.png');"></div>
+        <div class="kb-slide" style="background-image: url('4.jpg');"></div>
+        <div class="kb-slide" style="background-image: url('3.jpg');"></div>
+    </div>
+
+    <div class="hero-content">
         <div class="hero-welcome" id="typing-text" translate="no"></div>     
         <h1 class="hero-title">RATHORE</h1>
         <div class="divider-ornament">⚜ ⚜ ⚜</div>
-        <p id="hero-subtitle" style="color: #e0e0e0; font-size: 1.1em; letter-spacing: 2px; text-transform: uppercase; font-family: 'Cinzel', serif;">
-            LEGACY | HONOR | VALOUR
-        </p>
-    </header>
+        <p id="hero-subtitle">LEGACY | HONOR | VALOUR</p>
+    </div>
+</header>
 
     <main class="main-content">
         
@@ -448,7 +457,7 @@
                 }
             });
         }
-    </script><script type="module" src="mainscript.js"></script>    
+    </script><script type="module" src="globaljs.js"></script>    
 
 </body>
 </html>
