--- a/testindex.html
+++ b/testindex.html
@@ -40,6 +40,7 @@
             display: flex; align-items: center; justify-content: space-between;
             padding: 0 20px; z-index: 1000;
             box-shadow: 0 4px 15px rgba(0,0,0,0.5);
+            border-radius: 0 0 20px 20px;
         }
         .navbar-brand-container { display: flex; align-items: center; gap: 10px; }
         #menu-logo { height: 35px; }
@@ -185,6 +186,7 @@
             color: var(--gold-main); padding: 40px 20px; text-align: center;
             border-top: 5px solid var(--gold-main);
             position: relative; z-index: 12;
+            border-radius:20px 20px 0 0;
         }
         .fb-link { background: linear-gradient(45deg, #b8860b, #ffd700); color: #000; padding: 8px 20px; border-radius: 20px; display: inline-block; margin-top: 15px; font-weight: bold; }
 
