--- a/testindex.html
+++ b/testindex.html
@@ -196,7 +196,7 @@
 
         /* MOBILE: No Gaps, Continuous Scroll */
         @media (max-width: 768px) {
-            .hero-section { background-attachment: scroll; background-image: url('mobile_hero.jpg'); } /* Mobile Hero */
+            .hero-section { background-attachment: scroll; background-image: url('klogo1.jpg'); } /* Mobile Hero */
             .royal-circle { width: 110px; height: 110px; }
             .hero-title { font-size: 1.8rem; }
             .royal-banner { min-width: auto; width: 90%; }
