--- a/testindex.html
+++ b/testindex.html
@@ -142,8 +142,8 @@
         
         /* Gap Images */
         .gap-img-1 { background-image: url('fort_kasumbi_full_view.png'); }
-        .gap-img-2 { background-image: url('fort_kasumbi_2.png'); }
-        .gap-img-3 { background-image: url('fort_kasumbi_2.png'); }
+        .gap-img-2 { background-image: url('fort_kasumbi_2.jpeg'); }
+        .gap-img-3 { background-image: url('view_from_fort.png'); }
 
         /* Typography */
         .section-heading {
@@ -257,7 +257,7 @@
 
     <header class="hero-section">
         <div class="hero-content">
-            <div class="royal-circle"><img src="menulogo.png" alt="Logo"></div>
+            <div class="royal-circle"><img src="klogo1.png" alt="Logo"></div>
             <div class="ornament-row">
                 <span class="swirl">❧</span>
                 <div class="royal-banner"><h1 class="hero-title">THIKANA KASUMBI</h1></div>
@@ -303,7 +303,7 @@
         </div>
     </section>
 
-    <div class="parallax-gap gap-img-2"></div>
+    <div class="parallax-gap gap-img-3"></div>
 
     <section class="cream-section">
         <div class="container">
