--- a/testindex.html
+++ b/testindex.html
@@ -254,13 +254,13 @@
     <nav class="navbar">
         <div class="navbar-brand-container">
             <img id="menu-logo" src="menulogo.png" alt="Logo"> 
-            <a class="navbar-brand" href="index.html">KASUMALGARH</a>
+            <a class="navbar-brand" href="/">KASUMALGARH</a>
         </div>
         <div class="menu-toggle" onclick="document.getElementById('mobile-popup').classList.toggle('open');">
             <i class="fa-solid fa-bars"></i>
         </div>
         <ul class="navbar-links">
-            <li><a href="index.html">HOME</a></li>
+            <li><a href="/">HOME</a></li>
             <li class="dropdown">
                 <a href="#">VANSHAWALI ▾</a>
                 <div class="dropdown-content">
@@ -276,7 +276,7 @@
 
     <div id="mobile-popup" class="mobile-menu-overlay">
         <ul class="mobile-links">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="vanshawali.html">Vanshawali</a></li>
             <li><a href="history.html">History</a></li>
             <li><a href="gallery.html">Gallery</a></li>
