--- a/testindex.html
+++ b/testindex.html
@@ -15,10 +15,10 @@
     <meta property="og:title" content="Thikana Kasumbi (Jakhlan) - Royal Heritage">
     <meta property="og:description" content="Explore the glorious Rathore Vanshawali and History of Thikana Kasumbi.">
     
-    <meta property="og:image" content="https://kasumalgarh.site/kasumi_fort.png">
+    <meta property="og:image" content="https://kasumalgarh.site/thikana_kasumbi_share.png">
     
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://kasumalgarh.site/kasumi_fort.png">
+    <meta name="twitter:image" content="https://kasumalgarh.site/thikana_kasumbi_share.png">
     <link rel="canonical" href="https://kasumalgarh.site/" />
 
     <link rel="icon" type="image/png" href="klogo1.png">
