--- a/testindex.html
+++ b/testindex.html
@@ -360,6 +360,16 @@
 
             <div class="guestbook-messages">
                 <h3 class="panel-title"><i class="fas fa-scroll"></i> शुभकामना संदेश</h3>
+                <div id="pinned-message" class="message-card pinned-card">
+    <div class="pinned-tag"><i class="fas fa-thumbtack"></i> स्वागत संदेश</div>
+    <strong>✦ युवराज गजराज सिंह (ठिकाना कसुम्बी)</strong>
+    <p class="message-text">
+        "ठिकाना कसुम्बी की इस डिजिटल पंजिका में आप सभी आत्मीयजनों का हृदय से स्वागत है। पूर्वजों के गौरव और इतिहास को सहेजने के इस प्रयास में आपकी उपस्थिति और मंगलकामनाएं हमारे लिए अमूल्य हैं। अपने विचार और सुझाव यहाँ अवश्य अंकित करें।"
+    </p>
+    <small>🚩 जय माता दी। खम्मा घणी।</small>
+</div>
+
+<div id="messagesContainer"> ... </div>
                 <div id="messagesContainer">
                     <p style="text-align:center;">संदेश लोड हो रहे हैं...</p>
                 </div>
