--- a/index.html
+++ b/index.html
@@ -180,9 +180,10 @@
                     <p id="intro-desc" style="font-size: 1.1em; line-height: 1.6; color: #805500; font-family: 'Playfair Display', serif; margin: 0;">
                         खम्मा घणी, सिर साँवरो, जय सूर्यदेव!<br><br>
                         यह <strong style="color: #660000;">कसूमलगढ़ (Fort Kasumbi)</strong>
-                        का पवित्र डिजिटल प्रांगण है — एक ऐसा आभासी दरबार, जहाँ सूर्यवंशी राठौड़ों का महान वंश सदियों से अपनी आन, बान और शान की ज्योति जलाए हुए है。<br>
-                        यहाँ हर पत्थर गवाह है उन अनगिनत युद्धों का, उन अमर बलिदानों का, और उन गौरवपूर्ण क्षणों का, जिन्होंने राठौड़ कुल को राजपूत इतिहास में अमर कर दिया。<br><br>
-                        इस वेबसाइट का उद्देश्य हमारी विस्तृत वंशावली (Genealogy) और इतिहास को संरक्षित करना है, ताकि आने वाली पीढ़ियाँ अपनी जड़ों से जुड़ी रहें。<br><br>
+                        का पवित्र डिजिटल प्रांगण है — एक ऐसा आभासी दरबार, जहाँ सूर्यवंशी राठौड़ों का महान वंश सदियों से अपनी आन, बान और शान की ज्योति जलाए हुए है।
+यहाँ हर पत्थर गवाह है उन अनगिनत युद्धों का, उन अमर बलिदानों का, और उन गौरवपूर्ण क्षणों का, जिन्होंने राठौड़ कुल को राजपूत इतिहास में अमर कर दिया।
+
+इस वेबसाइट का उद्देश्य हमारी विस्तृत वंशावली (Genealogy) और इतिहास को संरक्षित करना है, ताकि आने वाली पीढ़ियाँ अपनी जड़ों से जुड़ी रहें।。<br><br>
                         <span style="font-size:1.2em; font-weight:bold;">खम्मा घणी!</span>
                     </p>
 
