--- a/newindex.html
+++ b/newindex.html
@@ -125,7 +125,7 @@
         /* --- NAVBAR --- */
         .navbar-wrapper {
             background-color: var(--royal-blue);
-            background-image: url('footerbg.png');
+            background-image: url('footerbg1.png');
             background-repeat: repeat;
             border-bottom: 2px solid var(--gold-main);
             border-radius: 0 0 20px 20px;
@@ -137,7 +137,7 @@
         .navbar-inverse .navbar-nav>li>a:hover { color: var(--gold-hover) !important; text-shadow: 0 0 10px rgba(255, 215, 0, 0.8); background: transparent !important; }
         .navbar-brand { font-family: 'Cinzel'; color: #fff !important; font-weight: bold; font-size: 20px; display: flex; align-items: center; gap: 10px; margin-top: -5px; }
         .menu-logo-img { height: 35px; width: auto; border: none; }
-        .navbar-toggle { border-color: var(--gold-main) !important; background: var(--maroon-text) !important; }
+        .navbar-toggle { border-color: var(--gold-main) !important; background: var(--royal-blue) !important; }
         .navbar-toggle .icon-bar { background-color: #fff !important; }
         .dropdown-menu { background: var(--royal-blue); border: 1px solid var(--gold-main); }
         .dropdown-menu>li>a { color: #fff; padding: 10px; border-bottom: 1px solid rgba(184, 134, 11, 0.2); }
