--- a/suno.html
+++ b/suno.html
@@ -35,3 +35,5 @@
     </script>
 </body>
 </html>
+
+sun mere dadosa ko aadmkhor sher ka sikar karne pr jodhpur darbar ne ne inam me 12 ganw  lene ko kaha to unhone mna karke dadi or muchh mangi thi 
