--- a/hero.html
+++ b/hero.html
@@ -78,7 +78,7 @@
         .d1-jharokha { position: relative; filter: drop-shadow(0 10px 10px rgba(0,0,0,0.2)); }
         .d1-svg path { fill: #fff; stroke: var(--gold); stroke-width: 3px; }
         .d1-content { position: absolute; top: 50px; left: 0; width: 100%; }
-        .btn-1 { background: var(--royal-blue); color: var(--gold); border: 1px solid var(--gold); padding: 8px 20px; border-radius: 20px; }
+        .btn-1 { background: #001233; color: var(--gold); border: 1px solid var(--gold); padding: 8px 20px; border-radius: 20px; }
 
         /* 2. Double Box */
         .d2-box { background: #fff; padding: 30px 20px; border: 1px solid var(--gold); border-radius: 15px 15px 0 0; box-shadow: inset 0 0 0 5px #fff, inset 0 0 0 7px var(--gold), 0 10px 20px rgba(0,0,0,0.1); position:relative;}
