--- a/newcontact.html
+++ b/newcontact.html
@@ -26,7 +26,7 @@
 
         /* --- Menu (DITTO Gallery) --- */
         header {
-            background: var(--royal-blue);
+            background: #001233;
             padding: 20px;
             display: flex;
             justify-content: space-between;
@@ -88,7 +88,7 @@
         .submit-btn {
             width: 100%;
             background: var(--gold);
-            color: var(--royal-blue);
+            color: #001233;
             padding: 15px;
             border: none;
             border-radius: 5px;
@@ -119,7 +119,7 @@
 
         /* --- Footer (DITTO Gallery) --- */
         footer {
-            background: var(--royal-blue);
+            background: #001233;
             text-align: center;
             padding: 15px;
             border-top: 2px solid var(--gold);
