--- a/suno.html
+++ b/suno.html
@@ -55,3 +55,4 @@ sun mere dadosa ko aadmkhor sher ka sikar karne pr jodhpur darbar ne ne inam me 
 5. एक और नीति वाला
 पूत कपूत तो धन क्यों संचय, मूंछ कपूत तो शान क्यों रखय।
 सपूत हो तो मूंछां घनी, राजपूत रो नाम अमर करय॥
+#7A5D28 border
