--- a/newgallery.html
+++ b/newgallery.html
@@ -42,10 +42,10 @@
 
         /* NAVBAR CSS */
         .navbar-wrapper {
-            background-color: var(--royal-blue);
+            background-color: #001233;
             background-image: url('footerbg1.png'); 
             background-repeat: repeat;
-            border-bottom: 2px solid var(--gold-main);
+            border-bottom: 2px solid #7A5D28;
             border-radius: 0 0 20px 20px;
             position: fixed; top: 0; width: 100%; z-index: 1000;
             box-shadow: 0 4px 15px rgba(0,0,0,0.5);
@@ -70,9 +70,9 @@
 
         .navbar-brand { font-family: 'Cinzel'; color: #fff !important; font-weight: bold; font-size: 20px; display: flex; align-items: center; gap: 10px; margin-top: -5px; }
         .menu-logo-img { height: 35px; width: auto; border: none; }
-        .navbar-toggle { border-color: var(--gold-main) !important; background: var(--royal-blue) !important; }
+        .navbar-toggle { border-color: #7A5D28 !important; background: #001233 !important; }
         .navbar-toggle .icon-bar { background-color: #fff !important; }
-        .dropdown-menu { background: var(--royal-blue); border: 1px solid var(--gold-main); }
+        .dropdown-menu { background: #001233; border: 1px solid #7A5D28; }
         .dropdown-menu>li>a { color: #fff; padding: 10px; border-bottom: 1px solid rgba(184, 134, 11, 0.2); }
 
         @media (max-width: 768px) {
@@ -92,7 +92,7 @@
             padding: 120px 0 40px 0; /* Reduced bottom padding */
             text-align: center;
             color: #fff;
-            border-bottom: 4px solid var(--gold-main);
+            border-bottom: 4px solid #7A5D28;
             box-shadow: inset 0 -10px 20px rgba(0,0,0,0.5);
         }
         h1.page-title {
@@ -135,7 +135,7 @@
         .header-social-icons a:hover {
             color: var(--gold-hover);
             transform: translateY(-3px);
-            text-shadow: 0 0 10px var(--gold-main);
+            text-shadow: 0 0 10px #7A5D28;
         }
 
         /* =========================================
@@ -143,12 +143,12 @@
            ========================================= */
         .filter-container { text-align: center; margin: 30px 0; }
         .filter-btn {
-            background: transparent; border: 2px solid var(--gold-main); color: var(--maroon-text);
+            background: transparent; border: 2px solid #7A5D28; color: var(--maroon-text);
             padding: 8px 25px; margin: 5px; font-family: 'Cinzel', serif; font-weight: bold;
             transition: 0.3s; cursor: pointer; border-radius: 30px;
         }
         .filter-btn:hover, .filter-btn.active {
-            background: var(--gold-main); color: #fff; box-shadow: 0 0 10px var(--gold-main);
+            background: #7A5D28; color: #fff; box-shadow: 0 0 10px #7A5D28;
         }
 
         /* Section Headings */
@@ -172,7 +172,7 @@
 
         .gallery-item {
             display: inline-block; width: 100%; margin-bottom: 15px;
-            position: relative; overflow: hidden; border: 2px solid var(--gold-main);
+            position: relative; overflow: hidden; border: 2px solid #7A5D28;
             border-radius: 5px; background: #000; cursor: pointer;
             box-shadow: 0 5px 15px rgba(0,0,0,0.2); transition: 0.3s;
         }
@@ -209,7 +209,7 @@
         }
         @keyframes pulse {
             0% { transform: scale(1); }
-            50% { transform: scale(1.05); box-shadow: 0 0 15px var(--gold-main); }
+            50% { transform: scale(1.05); box-shadow: 0 0 15px #7A5D28; }
             100% { transform: scale(1); }
         }
 
@@ -223,27 +223,27 @@
         .modal-content-box {
             position: relative; top: 50%; transform: translateY(-50%);
             width: 90%; max-width: 800px; margin: 0 auto;
-            border: 4px solid var(--gold-main); padding: 5px; background: #000;
-            box-shadow: 0 0 30px var(--gold-main);
+            border: 4px solid #7A5D28; padding: 5px; background: #000;
+            box-shadow: 0 0 30px #7A5D28;
         }
         .modal-media { width: 100%; max-height: 60vh; object-fit: contain; }
         .modal-video-frame { width: 100%; height: 400px; border: none; }
         .modal-close { position: absolute; top: -40px; right: 0; color: #fff; font-size: 40px; cursor: pointer; }
         
         .action-bar {
-            background: var(--royal-blue); padding: 10px; display: flex; 
-            justify-content: center; gap: 20px; border-top: 2px solid var(--gold-main);
+            background: #001233; padding: 10px; display: flex; 
+            justify-content: center; gap: 20px; border-top: 2px solid #7A5D28;
         }
         .action-btn {
-            color: var(--gold-main); font-family: 'Cinzel', serif; font-weight: bold;
-            text-decoration: none; font-size: 14px; border: 1px solid var(--gold-main);
+            color: #7A5D28; font-family: 'Cinzel', serif; font-weight: bold;
+            text-decoration: none; font-size: 14px; border: 1px solid #7A5D28;
             padding: 5px 15px; transition: 0.3s;
         }
-        .action-btn:hover { background: var(--gold-main); color: #000; text-decoration: none; }
+        .action-btn:hover { background: #7A5D28; color: #000; text-decoration: none; }
 
         .royal-footer {
-            background-color: var(--royal-blue); background-image: url('footerbg.png'); background-repeat: repeat;
-            color: var(--gold-main); padding: 20px 10px; text-align: center; border-top: 4px solid var(--gold-main);
+            background-color: #001233; background-image: url('footerbg.png'); background-repeat: repeat;
+            color: #7A5D28; padding: 20px 10px; text-align: center; border-top: 4px solid #7A5D28;
             margin-top: 0; border-radius: 25px 25px 0 0; 
         }
         .royal-footer .fb-link { margin-top: 10px; margin-bottom: 10px; }
@@ -402,7 +402,7 @@
         <div class="container">
             <div style="font-size: 0.9em; color: #ccc;">Developed & Designed By:</div>
             <div style="color:#ffd700; font-size:1.4rem; font-family: 'Cinzel', serif; margin: 5px 0;">Yuvraj Gajraj Singh</div>
-            <a href="https://www.facebook.com/gajsa.kasumbi" target="_blank" class="fb-link" style="display:inline-block; margin:10px 0; color:var(--gold-main);"><i class="fab fa-facebook"></i> Connect on Facebook</a>
+            <a href="https://www.facebook.com/gajsa.kasumbi" target="_blank" class="fb-link" style="display:inline-block; margin:10px 0; color:#7A5D28;"><i class="fab fa-facebook"></i> Connect on Facebook</a>
             <div style="font-size: 0.8em; margin-top: 10px; color: #888;">&copy; 2026 | All Rights Reserved.</div>
         </div>
     </footer>
